Fixed text bleed on image

--- a/app/assets/stylesheets/customOverrides/search_result.scss
+++ b/app/assets/stylesheets/customOverrides/search_result.scss
@@ -4,6 +4,8 @@ DEFAULT MOBILE STYLING
 
 .document-metadata {
   position: absolute;
+  flex: 0 0 75%;
+  max-width: 75%;
 }
 
 .search-highlight {
